--- a/package.json
+++ b/package.json
@@ -17,17 +17,25 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@react-email/components": "^0.5.7",
+    "@react-email/render": "^1.4.0",
     "@react-three/fiber": "^9.4.0",
+    "@types/canvas-confetti": "^1.9.0",
+    "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.545.0",
     "motion": "^12.23.24",
     "next": "15.5.4",
+    "next-themes": "^0.4.6",
     "ogl": "^1.0.11",
     "radix-ui": "^1.4.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-use-measure": "^2.1.7",
     "recharts": "^2.15.4",
+    "resend": "^6.1.3",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "three": "^0.180.0"
   },
